button search-logo-extra code
Button search: problem of padding fixed
logo: padding 0 deleted so it can have more margins in the sides
extra code. there were extra code in spacewalk-bar (top right)

--- a/css/spacewalk.less
+++ b/css/spacewalk.less
@@ -106,7 +106,7 @@ header .row{
 	margin: 0 1em 
 }
 header .logo{
-	padding:1.2em 0 0 0;
+	padding-top:1.4sem;
 }
 header form{
 	margin: .9em 0 1em 0
@@ -159,6 +159,9 @@ header form input[type="search"]{
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
+header .btn.btn-info.input-sm{
+	padding-top: 4px
+}
 
 /* fixing margin issue in Bootstrap 3 */
 
@@ -204,8 +207,6 @@ section #bar{
 }
 section #bar .spacewalk-bar{
 	padding: .5em 1.2em;
-	right: 0;
-	top: 1em;
 	background: #fff;
 	border:1px solid #ccc;
 	text-align: right;
