--- a/css/spacewalk.less
+++ b/css/spacewalk.less
@@ -3,7 +3,8 @@
 /* Here begins the spacewalk css theme */
 /* Import of Roboto font */
 @import url(http://fonts.googleapis.com/css?family=Roboto:300,700);
-
+/*Import of Tables style*/
+@import  url(tables.less);
 /* Main font size */
 @font-size-base: 13px;
 
@@ -317,9 +318,6 @@ aside .nav > li > a{
 /* TABLES */
 .table > thead > tr.active > th{
 	background: @gray-lighter;
-}
-.table{
-	border-radius: 4px
 }
 
 /* Icons Legend */
