--- a/css/tables.less
+++ b/css/tables.less
@@ -1,55 +1,46 @@
 /* TABLES: GENERAL STYLE */
 
-.spacewalk-table{
+.table-rounded{
 	width: 100%;
 	border-collapse: separate;
 	border-spacing: 0;
 }
-.spacewalk-table th,
-.spacewalk-table td{
+.table-rounded th,
+.table-rounded td{
 	text-align: left;
 	border: 1px solid @gray-light;
 }
-.spacewalk-table thead th{
+.table-rounded thead th{
     padding: .7em 0 .7em 1em;
     color: #fff;
     background: #ccc;
 	border-bottom: 0px solid @gray-light;
 	border-right: 0px solid @gray-light;
 }
-.spacewalk-table thead th:first-child{
-	-moz-border-radius: 6px 0 0 0;
-	border-radius: 6px 0 0 0;
-	-webkit-border-radius: 6px 0 0 0;
-	-khtml-border-radius: 6px 0 0 0;
+.table-rounded thead th:first-child{
+	.border-rounded(6px; 0; 0; 0);
 }
-.spacewalk-table thead th:last-child{
-	-moz-border-radius: 0 6px 0 0;
-	border-radius: 0 6px 0 0;
-	-webkit-border-radius: 0 6px 0 0;
-	-khtml-border-radius:  0 6px 0 0;
+.table-rounded thead th:last-child{
+	.border-rounded(0; 6px; 0; 0);
 	border-right: 1px solid @gray-light;
 }
-.spacewalk-table thead tr th:only-of-type {
-	-moz-border-radius: 6px 6px 0 0;
-	border-radius: 6px 6px 0 0;
-	-webkit-border-radius: 6px 6px 0 0;
-	-khtml-border-radius:  6px 6px 0 0;
+.table-rounded thead tr th:only-of-type {
+	.border-rounded(6px; 6px; 0; 0);
 }
-.spacewalk-table tbody td{
+.table-rounded tbody td{
     padding: .7em 0 .7em 1em;
 	font-weight: normal;
 	border-right: 0px solid @gray-light;
 	border-bottom: 0px solid @gray-light;
 }
-.spacewalk-table tbody td:last-child{
+.table-rounded tbody td:last-child{
 	border-right: 1px solid @gray-light;
 }
-.spacewalk-table tbody td img{
+.table-rounded tbody td img{
 	margin: 0 8px 0 0;
 	float: left
 }
-.spacewalk-table tbody tr{
+.table-rounded tbody tr{
 	background: #fff;
 	-webkit-transition: background 0.5s ease;  
     -moz-transition: background 0.5s ease;  
@@ -57,40 +48,22 @@
     -ms-transition: background 0.5s ease;  
     transition: background 0.5s ease;
 }
-.spacewalk-table tbody tr:hover{
-	background: darken(@gray-lighter, 1%);
-}
-.spacewalk-table tbody td p{
+.table-rounded tbody td p{
 	float: left;
 	margin: 5px 0 0 0
 }
-.spacewalk-table tbody tr:last-child td:first-child{
-	-moz-border-radius: 0 0 0 6px;
-	border-radius: 0 0 0 6px;
-	-webkit-border-radius: 0 0 0 6px;
-	-khtml-border-radius: 0 0 0 6px;
+.table-rounded tbody tr:last-child td:first-child{
+	.border-rounded(0; 0; 0; 6px);
 	border-bottom: 1px solid @gray-light;
 }
-.spacewalk-table tbody tr:last-child td:last-child{
-	-moz-border-radius: 0 0 6px 0;
-	border-radius: 0 0 6px 0;
-	-webkit-border-radius: 0 0 6px 0;
-	-khtml-border-radius: 0 0 6px 0;
+.table-rounded tbody tr:last-child td:last-child{
+	.border-rounded(0; 0; 6px; 0);
 	border-bottom: 1px solid @gray-light;
 }
-.spacewalk-table tbody tr:last-child td:only-of-type{
-	-moz-border-radius: 0 0 6px 6px;
-	border-radius: 0 0 6px 6px;
-	-webkit-border-radius: 0 0 6px 6px;
-	-khtml-border-radius: 0 0 6px 6px;
+.table-rounded tbody tr:last-child td:only-of-type{
+	.border-rounded(0; 0; 6px; 6px);
 	border-bottom: 1px solid @gray-light;
 }
-.spacewalk-table tbody tr:last-child td{
+.table-rounded tbody tr:last-child td{
 	border-bottom: 1px solid @gray-light;
-}
-
-/* XS tables */
-.spacewalk-table.spacewalk-table-xs thead td, 
-.spacewalk-table.spacewalk-table-xs tbody td{
-    padding: .3em 0 .3em .5em;
 }
