--- a/css/spacewalk.less
+++ b/css/spacewalk.less
@@ -75,7 +75,8 @@ h2{
 .wrap{
 	overflow: hidden;
 	min-height: 100%;
-	margin:0 auto -60px auto;
+	margin:0 auto -80px auto;
+	padding: 0 0 80px
 }
 .login-page{
 	width: 70%;
