--- a/css/tables.less
+++ b/css/tables.less
@@ -12,8 +12,7 @@
 }
 .table-rounded thead th{
     padding: .7em 0 .7em 1em;
-    color: #fff;
-    background: #ccc;
+    background: #e7e7e7;
 	border-bottom: 0px solid @gray-light;
 	border-right: 0px solid @gray-light;
 }
@@ -66,4 +65,23 @@
 }
 .table-rounded tbody tr:last-child td{
 	border-bottom: 1px solid @gray-light;
+}
+
+
+.table thead > tr > td{
+	padding: 0
+}
+// colour to the head, except for when it is the last TR in the thead (it will be white)
+thead tr{
+	background: #e7e7e7;
+	&:last-of-type{
+		background: #ffffff;
+	}
+}
+// Colour to the tfoot
+tfoot{
+	background: #f3f3f3
+}
+.panel .table{
+	margin-bottom: 0;
 }
