--- a/demo-files/demo.css
+++ b/demo-files/demo.css
@@ -6,6 +6,7 @@ body {
 	line-height: 1.5;
 	color: #555;
 	background: #fff;
+	-webkit-font-smoothing: antialiased;
 }
 h1 {
 	font-size: 1.5em;
@@ -23,6 +24,9 @@ a:hover, a:focus {
 }
 .bshadow0, input {
 	box-shadow: inset 0 -2px #e7e7e7;
+}
+.bshadow0 span:first-child {
+	font-size: 40px;
 }
 input:hover {
 	box-shadow: inset 0 -2px #ccc;
@@ -45,7 +49,8 @@ input:focus {
 }
 .glyph {
 	font-size: 16px;
-	width: 15em;
+	width: 17em;
+	height: 6em;
 	padding: 1em;
 	margin-right: 1em;
 	margin-bottom: 1em;
@@ -152,5 +157,5 @@ p {
 	font-size: 16px;
 }
 .fs1 {
-	font-size: 20px;
+	font-size: 16px;
 }
