--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 @font-face {
 	font-family: 'spacewalk-icon';
-	src:url('fonts/spacewalk-icon.eot');
-	src:url('fonts/spacewalk-icon.eot?#iefix') format('embedded-opentype'),
-		url('fonts/spacewalk-icon.ttf') format('truetype'),
-		url('fonts/spacewalk-icon.woff') format('woff'),
-		url('fonts/spacewalk-icon.svg#spacewalk-icon') format('svg');
+	src:url('fonts/spacewalk-icon.eot?-cm5fig');
+	src:url('fonts/spacewalk-icon.eot?#iefix-cm5fig') format('embedded-opentype'),
+		url('fonts/spacewalk-icon.woff?-cm5fig') format('woff'),
+		url('fonts/spacewalk-icon.ttf?-cm5fig') format('truetype'),
+		url('fonts/spacewalk-icon.svg?-cm5fig#spacewalk-icon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 
-[class*="spacewalk-icon-"] {
+[class^="spacewalk-icon-"], [class*=" spacewalk-icon-"] {
 	font-family: 'spacewalk-icon';
 	speak: none;
 	font-style: normal;
@@ -193,4 +193,7 @@
 }
 .spacewalk-icon-unknown-system:before {
 	content: "\e633";
+}
+.spacewalk-icon-bare-metal:before {
+	content: "\e623";
 }
